--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,20 +1,18 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
+  margin: 0 auto;
+}
+
+.navbar {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  padding: 0 4rem;
   align-items: center;
-  height: 100vh;
+  gap: 1rem;
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: auto;
+  margin: 0 0 4rem 0;
+  padding: 0 4rem;
 }
 
 .footer {
@@ -45,12 +43,10 @@
 }
 
 .title {
-  margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
-.title,
 .description {
   text-align: center;
 }
@@ -70,24 +66,34 @@
 }
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  display: grid;
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.gap-2 {
+  gap: 2rem;
+}
+
+.inline-grid {
+  display: inline-grid;
+}
+
+.object-fit {
+  object-fit: cover;
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  cursor: pointer;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 .card:hover,
@@ -98,8 +104,8 @@
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+  font-size: 12pt;
+  margin: 0;
 }
 
 .card p {
@@ -118,4 +124,36 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.flex {
+  display: inline-flex;
+  justify-content: space-between;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.918);
+}
+
+.popup-body {
+  background-color: white;
+  margin: 5rem 4rem;
+  padding: 1rem;
+  height: 500px;
+  border-radius: 5px;
+  display: flex;
+  gap: 1rem;
+}
+
+.popup-detail {
+  flex: 1;
+}
+
+.popup-detail table {
+  border: 1px solid #ccc;
 }
