--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,17 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.search {
+  width: 500px;
+}
+
+.search input {
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+
+.search input:focus {
+  outline: none;
+}
